crates/rskit-media/tests/snapshots/golden__codec_aac.snap
---
source: crates/rskit-media/tests/golden.rs
expression: "Codec::new(codec::audio::AAC)"
---
"aac"
