crates/rskit-media/tests/snapshots/golden__codec_h264.snap
---
source: crates/rskit-media/tests/golden.rs
expression: "Codec::new(codec::video::H264)"
---
"h264"
