crates/rskit-media/tests/snapshots/golden__codec_pcm.snap
---
source: crates/rskit-media/tests/golden.rs
expression: "Codec::new(codec::audio::PCM)"
---
"pcm"
