crates/rskit-media/tests/snapshots/golden__formats_for_codec_h264.snap
---
source: crates/rskit-media/tests/golden.rs
expression: ids
---
[
    "avi",
    "mkv",
    "mov",
    "mp4",
    "ts",
]
